--- a/index.html
+++ b/index.html
@@ -1,2 +1,47 @@
-
-<!DOCTYPE html> <html lang="en"> <head> <meta charset="UTF-8" /> <meta name="viewport" content="width=device-width, initial-scale=1.0" /> <!-- displays site properly based on user's device --> <script src="https://kit.fontawesome.com/2676ef475c.js" crossorigin="anonymous"></script> <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Poppins:wght@100;400&display=swap" rel="stylesheet"> <link rel="stylesheet" href="css/styles.css"> <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" /> <title> Frontend Mentor | Huddle landing page with single introductory section </title> </head> <body> <header> <img src="images/logo.svg" alt="logo" class="logo" id="logo"> </header> <main> <img src="images/illustration-mockups.svg" alt="" class="mockups"> <div class="content"> <h1>Build The Community Your Fans Will Love </h1> <p>Huddle re-imagines the way we build communities. You have a voice, but so does your audience. Create connections with your users as you engage in genuine discussion.</p> <button class="button">Register</button> </div> </main> <div class="icons"> <i class="fab fa-facebook-f"></i> <i class="fab fa-twitter"></i> <i class="fab fa-instagram"></i> </div> </body> </html>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
+    <script
+      src="https://kit.fontawesome.com/2676ef475c.js"
+      crossorigin="anonymous"
+    ></script>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Poppins:wght@100;400&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/styles.css" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
+    <title>
+      Frontend Mentor | Huddle landing page with single introductory section
+    </title>
+  </head>
+  <body>
+    <header>
+      <img src="images/logo.svg" alt="logo" class="logo" id="logo" />
+    </header>
+    <main>
+      <img src="images/illustration-mockups.svg" alt="" class="mockups" />
+      <div class="content">
+        <h1>Build The Community Your Fans Will Love</h1>
+        <p>
+          Huddle re-imagines the way we build communities. You have a voice, but
+          so does your audience. Create connections with your users as you
+          engage in genuine discussion.
+        </p>
+        <button class="button">Register</button>
+      </div>
+    </main>
+    <footer class="icons">
+      <i class="fab fa-facebook-f"></i> <i class="fab fa-twitter"></i>
+      <i class="fab fa-instagram"></i>
+    </footer>
+  </body>
+</html>
